# vct

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  VCT.sln  VCT.vcxproj  VCT.vcxproj.filters  build-assimp.sh  format.py  todo.txt
Code/Engine/Core/: CMakeLists.txt  com_dvars.h  com_misc.h  editor.cpp  lua_script.h  main_window.cpp
Source/Editor/: CMakeLists.txt  ConsolePanel.cpp  ConsolePanel.h  DebugPanel.cpp  DebugPanel.h  Editor.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h  Gizmo.cpp  Gizmo.h  HierarchyPanel.h  Panel.cpp  Panel.h  PropertiyPanel.cpp  PropertiyPanel.h  Viewer.cpp  Viewer.h  main.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Container/: fixed_string.h  ring_buffer.h
Source/Engine/Core/: Application.cpp  Application.h  Archive.h  Check.cpp  Check.h  CommonDvars.h  Defines.h  DynamicVariable.h  DynamicVariableBegin.h  Input.cpp  Input.h  InputCode.h  Log.cpp  Log.h  ManagerBase.cpp  ManagerBase.h  Timer.h  Types.h  UIManager.h  Utility.h  WindowManager.cpp  camera.cpp  camera.h  com_cmdline.cpp  com_cmdline.h  com_dvars.h  com_filesystem.cpp  com_filesystem.h  com_misc.cpp  com_misc.h  editor.cpp  editor.h  geometry.cpp  geometry.h  imgui_impl_glfw.cpp  lua_script.cpp  lua_script.h  main.cpp  main_window.cpp  main_window.h  (+2 more)
Source/Engine/Framework/: Application.cpp  Application.h  GraphicsManager.cpp  Layer.h  (+10 more)
Test/Memory/: CMakeLists.txt  MemoryTest.cpp
Test/Serialize/: CMakeLists.txt  SerializeTest.cpp
code/loaders/: AssimpLoader.h  CMakeLists.txt
resources/glsl/: CMakeLists.txt  cbuffer.glsl.h  depth.frag  fxaa.frag  gbuffer.frag  lighting_vxgi.frag  mesh_animated.vert  mesh_static.vert  shadow.glsl  ssao.frag  vct_deferred.frag  vsinput.glsl.h
source/: .clang-format  App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  Engine.vcxproj  Engine.vcxproj.filters  ImGui.vcxproj  InputManager.h  MainPass.cpp  MainPass.h  Scene.h  SceneManager.cpp  SceneManager.h  ShadowPass.cpp  TextureRenderer.cpp  TextureRenderer.h  Timer.h  VisualizationPass.cpp  VisualizationPass.h  VoxelPass.cpp  VoxelPass.h  common.h  dummy.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  main.cpp
source/Base/: Asserts.h  Base.vcxproj  Base.vcxproj.filters  Defines.h  IManager.cpp  IManager.h  Logger.cpp
source/Core/: AssimpLoader.hpp  BaseManager.cpp  BaseManager.hpp  FileManager.cpp  FileManager.h  GeomMath.cpp  GeomMath.hpp  GraphicsManager.h  WindowManager.cpp  WindowManager.h  camera.h  com_dvars.h  com_misc.cpp  editor.cpp  editor.h  main.cpp  scene_components.h
source/DrawPass/: BaseDrawPass.cpp  BaseDrawPass.hpp  DeferredPass.cpp  DeferredPass.hpp  GBufferPass.cpp  GuiPass.cpp  GuiPass.hpp  OverlayPass.cpp  OverlayPass.hpp  SSAOPass.cpp  ShadowMapPass.cpp  VoxelizationPass.cpp  VoxelizationPass.hpp
source/Editor/: Editor.vcxproj  main.cpp
source/GL/: CMakeLists.txt  GpuBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
source/Graphics/: FrameStructure.hpp  GpuResource.h  GpuTexture.cpp  GraphicsManager.cpp  GraphicsManager.hpp  MainRenderer.cpp  MainRenderer.h  PipelineStateManager.cpp  PipelineStateManager.hpp  gl_utils.cpp  gl_utils.h  r_cbuffers.cpp  r_cbuffers.h  r_defines.h  r_editor.cpp  r_passes.cpp  r_rendertarget.cpp  r_rendertarget.h  r_sun_shadow.cpp  r_sun_shadow.h
source/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
source/Interface/: IPipelineStateManager.hpp  IRuntimeModule.hpp  Interface.hpp
source/RHI/: GLGraphicsManager.cpp  GLGraphicsManager.hpp  GLPipelineStateManager.cpp  GLPipelineStateManager.hpp  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp  OpenGLPipelineStateManager.cpp
source/SceneGraph/: Entity.hpp  Scene.cpp
source/_stale/: lua_script.h
source/application/: Application.cpp  Application.h  CMakeLists.txt  Globals.h  Window.cpp  Window.h
source/base/: Assertion.h  CMakeLists.txt  Exception.cpp  Exception.h  File.cpp  File.h  GeoMath.h
source/common/: Application.cpp  Application.h  CMakeLists.txt  Globals.h  Window.cpp  Window.h  camera.cpp  com_cmdline.cpp  com_cmdline.h  com_dvars.h  com_filesystem.cpp  com_filesystem.h  com_misc.cpp  com_misc.h  com_system.cpp  com_system.h  editor.cpp  editor.h  geometry.cpp  geometry.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  lua_script.cpp  main.cpp  main_window.cpp  main_window.h  scene.h  scene_components.h
source/editor/: CMakeLists.txt
source/engine/: CMakeLists.txt
source/imgui/: CMakeLists.txt  imgui.cpp  imgui.h
source/loaders/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  ILoader.h  MyLoader.cpp  MyLoader.h  Scene.h
source/math/: CMakeLists.txt  GeoMath.h
source/renderer/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  GLGraphicsManager.cpp  GLGraphicsManager.h  GlslProgram.cpp  GlslProgram.h  GpuBuffer.h  GpuResource.h  GpuTexture.cpp  GpuTexture.h  ImguiRenderer.cpp  ImguiRenderer.h  MainRenderer.cpp  MainRenderer.h  MasterRenderer.cpp  MasterRenderer.h  RenderSystem.cpp  RenderSystem.h  RenderTarget.cpp  RenderTarget.h  gl_utils.cpp  gl_utils.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  r_cbuffers.cpp  r_cbuffers.h  r_defines.h  r_editor.cpp  r_editor.h  r_passes.cpp  r_passes.h  r_rendertarget.cpp  r_rendertarget.h  r_shader.cpp  r_shader.h  r_sun_shadow.cpp  r_sun_shadow.h
source/scene/: CMakeLists.txt  Camera.cpp  Camera.h  CreateScene.cpp  CreateScene.h  Scene.h  SceneLoader.cpp  SceneLoader.h  scene_loader.cpp  scene_loader.h
source/shaders/: cbuffer.glsl  cbuffer.glsl.h  common.glsl  depth.vert  depth.vert.glsl  depth_animated.vert  depth_static.vert  fullscreen.vert  fullscreen.vert.glsl  fxaa.frag  gbuffer.frag  gbuffer.vert  gbuffer.vert.glsl  pbr.glsl  pos_normal_uv_tangent.vert  pos_normal_uv_tangent_bone.vert  shadow.glsl  shadowmap.vert.glsl  ssao.frag  vct_deferred.frag  vct_deferred.frag.glsl
source/universal/: CMakeLists.txt  core_assert.h  core_math.cpp  core_math.h  dvar_api.cpp  dvar_api.h  dvar_begin.h  platform_defines.h  print.cpp  print.h  universal.h
temp/Editor/: CMakeLists.txt
(+772 files in other folders)
